cmake_minimum_required(VERSION 3.21)
project(TP_POO)

set(CMAKE_CXX_STANDARD 17)

add_executable(TP_POO main.cpp Animal.cpp Animal.h Alimento.cpp Alimento.h Zona.cpp Zona.h Reserva.cpp Reserva.h Simulador.cpp Simulador.h utils.h Coelho.cpp Coelho.h Ovelha.cpp Ovelha.h Lobo.cpp Lobo.h Canguru.cpp Canguru.h Relva.cpp Relva.h Cenoura.cpp Cenoura.h Corpo.cpp Corpo.h Bife.cpp Bife.h Configuracao.cpp Configuracao.h AnimalMisterio.cpp AnimalMisterio.h AlimentoMisterio.cpp AlimentoMisterio.h)
